fixed referrals page on mobile displays

--- a/src/pages/Profile/Partners/UserInfo/UserInfo.module.scss
+++ b/src/pages/Profile/Partners/UserInfo/UserInfo.module.scss
@@ -51,7 +51,6 @@
 
 .user-rank img  {
     width: 25px;
-    //height: 25px;
     margin-right: 5px;
 }
 
@@ -155,15 +154,26 @@
         row-gap: 32px;
     }
 
-
-
-
     .column:nth-child(2) {
         padding-left: 10px;
     }
 
     .column:nth-child(4) {
         padding-left: 10px;
+    }
+
+    .column svg {
+        margin-right: 10px;
+        width: 40px;
+        height: 40px;
+    }
+
+    .column span {
+        font-size: 16px;
+    }
+
+    .user-rank img {
+        width: 15px;
     }
 }
 
@@ -174,6 +184,6 @@
     }
 
     .column span {
-        font-size: 18px;
+        font-size: 14px;
     }
 }
